# code-gym

./: .gitignore  CATALOG.md  PLAN.md  README.md  pbs.md  prs.md  pyproject.toml
movements/adam/: README.md
movements/backprop_from_scratch/: README.md
movements/cross_entropy/: README.md
movements/data_parallel_simulated/: README.md
movements/ddp_grad_sync/: README.md
movements/dropout/: README.md
movements/flash_attention_v2/: README.md
movements/gpu_compute_model/: README.md
movements/grouped_query_attention/: README.md
movements/kv_cache/: README.md
movements/layernorm/: README.md
movements/multi_head_attention/: README.md
movements/online_softmax_recurrence/: README.md
movements/paged_attention_full/: README.md
movements/paged_kv_cache/: README.md
movements/positional_encodings/: README.md
movements/prefill_decode_analysis/: README.md
movements/prefill_decode_split/: README.md
movements/ring_all_reduce_simulated/: README.md
movements/rmsnorm/: README.md
movements/sampling_greedy_topk_topp/: README.md
movements/scaled_dot_product_attention/: README.md
movements/sgd_momentum/: README.md
movements/softmax_stable/: README.md
movements/tensor_parallel_simulated/: README.md
movements/tp_column_row_pair/: README.md
movements/transformer_block/: README.md
movements/triangular_mask/: README.md
movements/zero_memory_accounting/: README.md
movements/zero_stages_simulated/: README.md
projects/: README.md
projects/mini_nccl_lite/: README.md  notes.md
wods/: day01.md  day02.md  day03.md
(+24 files in other folders)
